fixed user sign up logic